<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Button"
        android:text="Done"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/add_categories"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apparel_accessories"
        android:id="@+id/cat_app_acces"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apparel_for_men"
            android:id="@+id/cat_app_men"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apparel_for_women"
            android:id="@+id/cat_app_women"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automobile_and_motorcycles"
            android:id="@+id/cat_app_auto"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beauty_and_health"
            android:id="@+id/cat_app_beauty"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cellphones"
            android:id="@+id/cat_app_cell"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_and_office"
            android:id="@+id/cat_app_computer"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consumer_electronics"
            android:id="@+id/cat_app_electronics"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electronic_components"
                android:id="@+id/cat_app_elec_compo"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/furniture"
                android:id="@+id/cat_app_Furniture"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_and_garden"
                android:id="@+id/cat_app_home"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_appliances"
                android:id="@+id/cat_app_home_app"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jewelry_and_accessories"
                android:id="@+id/cat_app_jewelry"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luggage_and_bags"
                android:id="@+id/cat_app_luggage"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mother_and_kids"
                android:id="@+id/cat_app_kids"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:id="@+id/cat_app_shoes"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:id="@+id/cat_app_sports"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tools"
                android:id="@+id/cat_app_tools"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toys"
                android:id="@+id/cat_app_toys"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/underwear_and_sleepwears"
                android:id="@+id/cat_app_underwear"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watches"
                android:id="@+id/cat_app_watches"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>